fix full width alignment thumb size

--- a/lg-gallery-block/src/block/editor.scss
+++ b/lg-gallery-block/src/block/editor.scss
@@ -14,8 +14,9 @@
 // 	margin-left: auto;
 // 	margin-right: auto;
 // }
-
+.block-editor-block-list__layout .block-editor-block-list__block[data-align=full]>.block-editor-block-list__block-edit .wp-block-lgng-gallery figure,
 .wp-block-lgng-gallery figure {
+	width: inherit;
 	margin: 0 0 15px 0;
 	padding-left: 7.5px;
 	padding-right: 7.5px;
